[tool.poetry]
name = "comfyui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version="^2.1.1", source="torch"}
torchsde = "^0.2.6"
einops = "^0.7.0"
transformers = ">=4.25.1"
safetensors = ">=0.3.0"
aiohttp = "^3.9.1"
accelerate = "^0.24.1"
pyyaml = "^6.0.1"
pillow = "^10.1.0"
scipy = "^1.11.4"
tqdm = "^4.66.1"
psutil = "^5.9.6"
torchvision = {version="^0.16.1", source="torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = 'supplemental'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
